<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F5F5F5"
    android:backgroundTint="#F5F5F5"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="408dp"
        android:layout_height="725dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_green_dark"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SearchView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:queryHint="Buscar" />

        <TextView
            android:id="@+id/Remedios"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:text="@string/remedios"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/dolores" />

        <Button
            android:id="@+id/button2"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/cuidado_personal" />

        <Button
            android:id="@+id/button3"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/bajar_de_peso" />

        <Button
            android:id="@+id/button4"
            android:layout_width="237dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/golpes" />

        <Button
            android:id="@+id/button5"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/mascotas" />

        <Button
            android:id="@+id/button6"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/otros" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
